--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,12 +1,11 @@
-server:
-  servlet:
-    context-path: "/api"
 spring:
   datasource:
     url: jdbc:h2:mem:mydb
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driverClassName: org.h2.Driver
+    h2:
+      console.enabled: true
   jpa:
     hibernate:
       ddl-auto: create-drop
