--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,12 +5,22 @@ ARG SPRING_PROFILE
 ARG DB_HOST
 ARG DB_DATABASE
 ARG DB_PORT
+ARG EMAIL_HOST
+ARG EMAIL_PORT
+ARG EMAIL_USERNAME
+ARG EMAIL_PASSWORD
+ARG EMAIL_FROM
 ENV DB_USERNAME=${DB_USERNAME}
 ENV DB_PASSWORD=${DB_PASSWORD}
 ENV DB_HOST=${DB_HOST}
 ENV DB_DATABASE=${DB_DATABASE}
 ENV DB_PORT=${DB_PORT}
+ENV EMAIL_HOST=${EMAIL_HOST}
+ENV EMAIL_PORT=${EMAIL_PORT}
+ENV EMAIL_USERNAME=${EMAIL_USERNAME}
+ENV EMAIL_PASSWORD=${EMAIL_PASSWORD}
+ENV EMAIL_FROM=${EMAIL_FROM}
 ENV SPRING_PROFILE=${SPRING_PROFILE}
-COPY ./target/ponto-eletronico-consulta-relatorio-0.0.1.jar /usr/src/myapp/app.jar
+COPY ../target/ponto-eletronico-consulta-relatorio-0.0.1.jar /usr/src/myapp/app.jar
 WORKDIR /usr/src/myapp
 ENTRYPOINT java -Dspring.profiles.active="$SPRING_PROFILE" -jar app.jar
